--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ls
+      - cd complete
       - mvn install -e
   post_build:
     commands:
