--- a/complete/appspec.yml
+++ b/complete/appspec.yml
@@ -11,6 +11,10 @@ hooks:
     - location: ./start_server 
       timeout: 300 
       runas: root 
+  ApplicationStart:
+    - location: ./start_app
+      timeout: 300
+      runas: root
   ApplicationStop: 
     - location: ./stop_server 
       timeout: 300 
