Removed installer for maven to see what happens

--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     commands:
       - echo Build started on `date`
       - cd complete
-      - mvn install -e
+      #- mvn install -e
   post_build:
     commands:
       - echo Build completed on `date`
