changed path to POM in post-build

--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -28,7 +28,7 @@ reports:
   Java-Spring-Report: #surefire junit reports
     commands:
       - echo "Runnings tests..."
-      - mvn -f complete/pom.xml integration-test
+      - mvn -f pom.xml integration-test
     files:
       - '**/*'
     base-directory: 'complete/target/failsafe-reports'
