Added MVN package command to build

--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -12,6 +12,7 @@ phases:
     commands:
       - echo Build started on `date`
       - cd complete
+      - mvn package
       #- mvn install -e
   post_build:
     commands:
