Edited base-directly path to remove complete root

--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -32,4 +32,4 @@ reports:
       - mvn -f pom.xml integration-test
     files:
       - '**/*'
-    base-directory: 'complete/target/failsafe-reports'
+    base-directory: 'target/failsafe-reports'
