--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -19,6 +19,9 @@ phases:
       - echo Build completed on `date`
       - ls
       - mvn surefire-report:report
+      - pwd
+      - ls ./target
+      - ls ./target/surefire-reports
       #- mvn -f pom.xml integration-test
 #artifacts:
 #  files:
