Changed path of base-dir to match the one that worked in the artifacts section

--- a/complete/buildspec.yml
+++ b/complete/buildspec.yml
@@ -36,4 +36,4 @@ reports:
       #- mvn -f pom.xml integration-test
     files:
       - '**/*'
-    base-directory: 'target/surefire-reports'
+    base-directory: 'complete/target/surefire-reports'
